clusters/lgsk8sp1/test/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  gateways:
  - argocd
  hosts:
  - argocd.lgsk8sp1.diegoluisi.eti.br # Change this to your domain
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
